--- a/Main/HTML/Mcdonald's.html
+++ b/Main/HTML/Mcdonald's.html
@@ -93,7 +93,7 @@
                 <!-- Card 1 -->
                 <div class="card">
                   <img src="../../assests/Images/mccafe-dsk-en.jpg" alt="mccafe-dsk-en" class="card-image">
-                  <div class="card-content">
+                  <div class="card-content" style="justify-content: center;">
                     <h3 class="card-title">McCafe</h3>
                     <p class="card-text">
                         Browse our menu for more information on topics such as our tasty coffee and espresso drinks.Browse our menu for more information on topics such as our tasty coffee and espresso drinks.
@@ -105,7 +105,7 @@
                 <!-- Card 2 -->
                 <div class="card">
                   <img src="../../assests/Images/mcdelivery-574x249-en.jpg" alt="Image 2" class="card-image">
-                  <div class="card-content">
+                  <div class="card-content" style=" text-align:center; ">
                     <h3 class="card-title">McDelivery</h3>
                     <p class="card-text">Delivering food at your doorsteps.</p>
                     <a href="#" class="card-button">Order Now</a>
@@ -198,7 +198,7 @@
          <div  class="prenavbar" style="display:flex; text-wrap: nowrap;">
 
 
-          <div >
+          <div class="card" >
             <div class="social-media ">
               <a  href="https://www.facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
               <a href="https://www.tiktok.com" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
